--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       CHANNEL_COUNT: "5"
       AUTO_CREATE_ACCOUNT: "true"
       REQUIRE_SECONDARY_PASSWORD: "true"
-      WZ_DIRECTORY: "/kinoko/wz"
+      WZ_DIRECTORY: "D:\LuckyStory\LuckyStory"
       DATA_DIRECTORY: "/kinoko/data"
       COMMAND_PREFIX: "!"
       DEBUG_MODE: "true"
